[package]
name = "even-cli"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
bonsai-sdk = { workspace = true }
bincode = { version = "1.3" }
bytemuck = { version = "1.14" }
clap = { version = "4.0", features = ["derive"] }
env_logger = { version = "0.10" }
ethers = { version = "2.0" }
hex = { version = "0.4" }
k256 = { version = "0.13" }
log = { version = "0.4" }
risc0-zkvm = { workspace = true, features = ["prove"] }
tokio = { version = "1.35", features = ["full"] }
even-guests = { workspace = true }
